meja/tests/row-subtract-printing.meja
let refine = fun (x : 'a,
                  f_A : 'a -> ['a - `A],
                  f_B : 'b -> ['b - `B],
                  f_C : 'c -> ['c - `C]) => {
  f_C(f_B(f_A(x)));
};

let refine_test = (refine : 'a -> _ -> _ -> _ -> ['a - `A | `B]);
